Closed Bug 230931 Opened 22 years ago Closed 22 years ago

nsFileStreams.h should not #include nsReadLine.h

Categories

(Core :: Networking, defect)

x86
Linux
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: Biesinger, Assigned: Biesinger)

Details

Attachments

(1 file)

nsReadLine.h contains some static functions; when nsFileStreams includes that it causes a build warning when nsFileStreams.h is included by nsNetModule.cpp
Attachment #139058 - Flags: superreview?(darin)
Attachment #139058 - Flags: review?(bz-vacation)
Status: NEW → ASSIGNED
Comment on attachment 139058 [details] [diff] [review] patch r=bzbarsky, though this static function really needs to go away...
Attachment #139058 - Flags: review?(bz-vacation) → review+
NS_InitLineBuffer can't easily be moved into a .cpp file, because spellchecker uses it. of course spellchecker reimplements NS_ReadLine, as an nsACString& version...
Oy. a "line" makes no sense for an nsACString&, but whatever.
Attachment #139058 - Flags: superreview?(darin) → superreview+
checked in
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: