bug 230931 - nsFileStreams.h should not #include nsReadLine.h this forward-declares nsLineBuffer in nsFileStreams.h instead, and turns a typedef struct { ... } nsLineBuffer into struct nsLineBuffer { ... } r=bzbarsky sr=darin